--- a/codigo/index.html
+++ b/codigo/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integracao Continua</li>
+        <li>Integracoes Continuas</li>
     </ul>
 </body>
 </html>
